--- a/mySpringBootDemo/src/main/resources/application.properties
+++ b/mySpringBootDemo/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 server.port=8081
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ccs_db
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
+spring.datasource.dbcp2.max-idle=10
+spring.datasource.dbcp2.max-total=50
+spring.datasource.dbcp2.max-wait-millis=10000
+spring.datasource.dbcp2.initial-size=5
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+logging.level.root=debug
+logging.level.org.springframework=debug
+logging.level.org.org.mybatis=debug
+
+
