--- a/mySpringBootDemo/src/main/resources/application.properties
+++ b/mySpringBootDemo/src/main/resources/application.properties
@@ -14,4 +14,18 @@ logging.level.root=debug
 logging.level.org.springframework=debug
 logging.level.org.org.mybatis=debug
 
+spring.redis.jedis.pool.max-active=18
+spring.redis.jedis.pool.min-idle=5
+spring.redis.jedis.pool.max-wait=2000
+spring.redis.port=6379
+spring.redis.host=localhost
+spring.redis.password=213456
+spring.redis.timeout=1000
+
+
+#spring.data.mongodb.host=
+#spring.data.mongodb.username=
+#spring.data.mongodb.password=
+#spring.data.mongodb.port=
+#spring.data.mongodb.database=
 
