--- a/mySpringBootDemo2/src/main/resources/application.properties
+++ b/mySpringBootDemo2/src/main/resources/application.properties
@@ -26,3 +26,19 @@ spring.datasource.dbcp2.max-idle=10
 spring.datasource.dbcp2.max-total=50
 spring.datasource.dbcp2.max-wait-millis=10000
 spring.datasource.dbcp2.initial-size=5
+
+#spring.activemq.broker-url=tcp://10.211.55.7:61616
+#spring.activemq.user=admin
+#spring.activemq.password=admin
+#spring.activemq.pool.enabled=true
+#spring.activemq.pool.max-connections=50
+#配置 activemq 信任的类,这里信任了所有的类，所有的类的对象都可以通过activemq传输。
+#spring.activemq.packages.trust-all=true
+
+#mq默认地址
+#spring.jms.template.default-destination=activemq.default.destination
+#是否使用发布，订阅模式，默认为false。
+#spring.jms.pub-sub-domain=true
+
+
+
