--- a/mySpringBootDemo2/src/main/resources/application.properties
+++ b/mySpringBootDemo2/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.datasource.dbcp2.initial-size=5
 #spring.activemq.packages.trust-all=true
 
 #mq默认地址
-#spring.jms.template.default-destination=activemq.default.destination
+spring.jms.template.default-destination=activemq.default.destination
 #是否使用发布，订阅模式，默认为false。
 #spring.jms.pub-sub-domain=true
 
