--- a/mySpringBootDemo2/pom.xml
+++ b/mySpringBootDemo2/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>spring-boot-starter-activemq</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>org.apache.activemq</groupId>-->
 <!--            <artifactId>activemq-pool</artifactId>-->
