--- a/mySpringBootDemo2/src/main/resources/application.properties
+++ b/mySpringBootDemo2/src/main/resources/application.properties
@@ -40,5 +40,7 @@ spring.jms.template.default-destination=activemq.default.destination
 #是否使用发布，订阅模式，默认为false。
 #spring.jms.pub-sub-domain=true
 
+// actuator 暴露的端点名称
+management.endpoints.web.exposure.include=*
 
 
