--- a/springLessons/pom.xml
+++ b/springLessons/pom.xml
@@ -14,6 +14,10 @@
       <module>dependency-lookup</module>
       <module>common</module>
       <module>dependency-injection</module>
+      <module>dependency-source</module>
+      <module>bean-scope</module>
+      <module>bean-lifecycle</module>
+      <module>configuration-metadata</module>
   </modules>
 
   <name>springLessons</name>
