--- a/springLessons/pom.xml
+++ b/springLessons/pom.xml
@@ -20,6 +20,11 @@
       <module>configuration-metadata</module>
       <module>resource</module>
       <module>i18n</module>
+      <module>data-binding</module>
+      <module>validation</module>
+      <module>convertion</module>
+      <module>generic</module>
+      <module>event</module>
   </modules>
 
   <name>springLessons</name>
