--- a/mySpringBootDemo3/src/main/resources/application-dev.properties
+++ b/mySpringBootDemo3/src/main/resources/application-dev.properties
@@ -1,7 +1,5 @@
-#-Dspring.profiles.active=test 指定jvm参数运行不同环境的配置。
-spring.profiles.active=dev
-server.port=8081
-spring.main.banner-mode=off
+server.port=8082
+spring.main.banner-mode=console
 pxl.name=pxl
 user.userName=pxl
 user.passWord=psw
