--- a/mySpringBootDemo3/src/main/resources/application-test.properties
+++ b/mySpringBootDemo3/src/main/resources/application-test.properties
@@ -1,6 +1,4 @@
-#-Dspring.profiles.active=test 指定jvm参数运行不同环境的配置。
-spring.profiles.active=dev
-server.port=8081
+server.port=8083
 spring.main.banner-mode=off
 pxl.name=pxl
 user.userName=pxl
@@ -31,19 +29,25 @@ mybatis-plus.global-config.db-config.id-type=auto
 #通过配置的形式就可以查阅执行期SQL语句
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-# 设置日志组
-# 自定义组名，设置当前组中所包含的包
-logging.group.ebank=cn.pxl.myspringbootdemo3.controller
+## 设置日志组
+## 自定义组名，设置当前组中所包含的包
+#logging.group.ebank=cn.pxl.myspringbootdemo3.controller
+#
+##测试可以用 error ,测试 指定报的日志级别。
+##logging.level.root=error
+#logging.level.root=info
+## 为对应组设置日志级别
+#logging.level.ebank=debug
+## 为对包设置日志级别
+#logging.level.cn.pxl.myspringbootdemo3.controller=debug
+#logging.level.cn.pxl.myspringbootdemo3.service=info
+#
+##logging.pattern.console="%d %clr(%p) --- [%16t] %clr(%-40.40c){cyan} : %m %n"
+#logging.logback.rollingpolicy.max-file-size=10KB
+#logging.logback.rollingpolicy.file-name-pattern=server.%d{yyyy-MM-dd}.%i.log
 
-logging.level.root=info
-# 为对应组设置日志级别
-logging.level.ebank=debug
-# 为对包设置日志级别
-logging.level.cn.pxl.myspringbootdemo3.controller=debug
+logging.config=classpath:logger/logging-test-config.xml
 
-#logging.pattern.console="%d %clr(%p) --- [%16t] %clr(%-40.40c){cyan} : %m %n"
-logging.logback.rollingpolicy.max-file-size=10KB
-logging.logback.rollingpolicy.file-name-pattern=server.%d{yyyy-MM-dd}.%i.log
 
 
 
