--- a/mySpringCloud/user-service/pom.xml
+++ b/mySpringCloud/user-service/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>cn.pxl</groupId>
-            <artifactId>common-utils</artifactId>
+            <artifactId>feign-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -30,6 +30,26 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!--nacos配置管理依赖-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <!--解决spring boot不加载bootstrap.properties文件的问题-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-bootstrap</artifactId>-->
+<!--            <version>4.0.0</version>-->
+<!--        </dependency>-->
+
     </dependencies>
     <build>
         <finalName>app</finalName>
