--- a/mySpringCloud/pom.xml
+++ b/mySpringCloud/pom.xml
@@ -14,6 +14,7 @@
     <groupId>cn.pxl</groupId>
     <artifactId>mySpringCloud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
     <name>mySpringCloud</name>
     <description>Demo project for Spring Boot</description>
 
@@ -21,6 +22,10 @@
         <module>user-service</module>
         <module>order-service</module>
         <module>feign-api</module>
+        <module>gateway</module>
+        <module>mq-consumer</module>
+        <module>mq-publisher</module>
+        <module>hotel-demo</module>
     </modules>
 
     <properties>
@@ -29,6 +34,8 @@
         <spring-cloud-alibaba.version>2.2.6.RELEASE</spring-cloud-alibaba.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <elasticsearch.version>7.17.7</elasticsearch.version>
+        <mybatisplus.version>3.5.2</mybatisplus.version>
         <java.version>1.8</java.version>
         <mysql.version>5.1.47</mysql.version>
         <mybatis.version>2.1.1</mybatis.version>
@@ -72,12 +79,36 @@
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>${elasticsearch.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatisplus.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <!--AMQP依赖，包含RabbitMQ-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <!--单元测试-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 
