--- a/mySpringCloud/order-service/src/main/resources/bootstrap.yaml
+++ b/mySpringCloud/order-service/src/main/resources/bootstrap.yaml
@@ -9,6 +9,7 @@ spring:
     nacos:
       config:
         # Nacos地址
-        server-addr: 10.211.55.5:80
+#        server-addr: 10.211.55.5:80
+        server-addr: 192.168.0.103:8843
         # 文件后缀名
         file-extension: yml
