--- a/mySpringCloud/pom.xml
+++ b/mySpringCloud/pom.xml
@@ -27,6 +27,7 @@
         <module>mq-publisher</module>
         <module>hotel-demo</module>
         <module>hotel-admin</module>
+        <module>seata-demo</module>
     </modules>
 
     <properties>
@@ -40,6 +41,7 @@
         <java.version>1.8</java.version>
         <mysql.version>5.1.47</mysql.version>
         <mybatis.version>2.1.1</mybatis.version>
+        <seata.version>1.4.2</seata.version>
     </properties>
 
     <dependencyManagement>
@@ -89,6 +91,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatisplus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-spring-boot-starter</artifactId>
+                <version>${seata.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
