--- a/myAr/pom.xml
+++ b/myAr/pom.xml
@@ -33,6 +33,12 @@
       <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>org.apache.avro</groupId>
+          <artifactId>avro</artifactId>
+          <version>1.7.7</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
